feat: Add bin executable to run conventional logs when installed as an npm package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     },
     "extends": "@tsconfig/recommended/tsconfig.json",
     "exclude": ["node_modules"],
-    "include": ["src"]
+    "include": ["src", "index.ts"]
   }
   
