--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "conventionallogs",
-  "version": "0.4.1",
+  "version": "0.6.0",
   "description": "A project designed to generate changelogs while following Conventional Commit Specifications to make version release and documentation easier.",
-  "main": "index.js",
+  "bin": {
+    "cologs":"./bin/cli.js"
+  },
   "scripts": {
     "installGithook": "cp scripts/commit-msg.sh .git/hooks/ && mv .git/hooks/commit-msg.sh .git/hooks/commit-msg && chmod +x .git/hooks/commit-msg && echo 'Commit message githook should be copied into local git folder'",
-    "test":"npx ts-node ./src/index.ts"
+    "test":"npx ts-node ./src/index.ts",
+    "compile": "npx tsc"
   },
   "author": "Ethan Jones",
   "license": "ISC",
