build: Update license to MIT

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compile": "npx tsc"
   },
   "author": "Ethan Jones",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^20.4.4",
