--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conventionallogs",
+  "name": "conventional-logs",
   "version": "0.6.0",
   "description": "A project designed to generate changelogs while following Conventional Commit Specifications to make version release and documentation easier.",
   "bin": {
